@@ -1,6 +1,6 @@
 # Copyright 2010-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/bitcoin-qt/bitcoin-qt-0.10.0.ebuild,v 1.5 2015/03/01 12:11:05 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/bitcoin-qt/bitcoin-qt-0.10.0-r1.ebuild,v 1.1 2015/03/04 00:04:51 blueness Exp $
 
 EAPI=5
 
@@ -9,6 +9,8 @@ BITCOINCORE_LJR_DATE="20150220"
 BITCOINCORE_IUSE="1stclassmsg dbus kde ljr +qrcode qt4 qt5 test upnp +wallet xt zeromq"
 BITCOINCORE_POLICY_PATCHES="cpfp dcmp rbf spamfilter"
 LANGS="ach af_ZA ar be_BY bg bs ca ca@valencia ca_ES cmn cs cy da de el_GR en eo es es_CL es_DO es_MX es_UY et eu_ES fa fa_IR fi fr fr_CA gl gu_IN he hi_IN hr hu id_ID it ja ka kk_KZ ko_KR ky la lt lv_LV mn ms_MY nb nl pam pl pt_BR pt_PT ro_RO ru sah sk sl_SI sq sr sv th_TH tr uk ur_PK uz@Cyrl vi vi_VN zh_HK zh_CN zh_TW"
+BITCOINCORE_NEED_LEVELDB=1
+BITCOINCORE_NEED_LIBSECP256K1=1
 inherit bitcoincore eutils fdo-mime gnome2-utils kde4-functions qt4-r2
 
 DESCRIPTION="An end-user Qt GUI for the Bitcoin crypto-currency"
@@ -17,9 +19,7 @@ SLOT="0"
 KEYWORDS="~amd64 ~arm ~x86"
 
 RDEPEND="
-	virtual/bitcoin-leveldb
 	dev-libs/protobuf
-	dev-libs/libsecp256k1
 	qrcode? (
 		media-gfx/qrencode
 	)
