@@ -1,11 +1,13 @@
 # Copyright 2010-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/bitcoin-qt/bitcoin-qt-9999.ebuild,v 1.5 2015/02/24 00:44:42 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/bitcoin-qt/bitcoin-qt-9999.ebuild,v 1.6 2015/03/04 00:04:51 blueness Exp $
 
 EAPI=5
 
 LANGS="ach af_ZA ar be_BY bg bs ca ca@valencia ca_ES cmn cs cy da de el_GR en eo es es_CL es_DO es_MX es_UY et eu_ES fa fa_IR fi fr fr_CA gl gu_IN he hi_IN hr hu id_ID it ja ka kk_KZ ko_KR ky la lt lv_LV mn ms_MY nb nl pam pl pt_BR pt_PT ro_RO ru sah sk sl_SI sq sr sv th_TH tr uk ur_PK uz@Cyrl vi vi_VN zh_HK zh_CN zh_TW"
 BITCOINCORE_IUSE="dbus kde +qrcode test upnp +wallet"
+BITCOINCORE_NEED_LEVELDB=1
+BITCOINCORE_NEED_LIBSECP256K1=1
 inherit bitcoincore eutils fdo-mime gnome2-utils kde4-functions qt4-r2 git-2
 
 DESCRIPTION="An end-user Qt GUI for the Bitcoin crypto-currency"
@@ -14,9 +16,7 @@ SLOT="0"
 KEYWORDS=""
 
 RDEPEND="
-	virtual/bitcoin-leveldb
 	dev-libs/protobuf
-	dev-libs/libsecp256k1
 	qrcode? (
 		media-gfx/qrencode
 	)
